--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Biryani:wght@200;300;400;600;700;800;900&family=East+Sea+Dokdo&family=Frijole&family=Imbue:opsz,wght@10..100,100..900&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Julius+Sans+One&family=Love+Ya+Like+A+Sister&family=Permanent+Marker&family=Press+Start+2P&family=Rampart+One&family=Rock+Salt&family=Rubik+80s+Fade&family=Rubik+Vinyl&family=Russo+One&family=Saira:ital,wght@0,100..900;1,100..900&family=Syne+Mono&family=Tourney:wght@100&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
  
-  <title>VINYL PORN</title>
+  <title>VINYL PORNING</title>
 
 </head>
 
