--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Biryani:wght@200;300;400;600;700;800;900&family=East+Sea+Dokdo&family=Frijole&family=Imbue:opsz,wght@10..100,100..900&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Julius+Sans+One&family=Love+Ya+Like+A+Sister&family=Permanent+Marker&family=Press+Start+2P&family=Rampart+One&family=Rock+Salt&family=Rubik+80s+Fade&family=Rubik+Vinyl&family=Russo+One&family=Saira:ital,wght@0,100..900;1,100..900&family=Syne+Mono&family=Tourney:wght@100&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
  
-  <title>VINYL PORNING</title>
+  <title>VINYL PORN</title>
 
 </head>
 
@@ -21,35 +21,15 @@
           <button class="menu-toggle" id="menu-toggle">☰</button>
           <ul class="nav-links" id="nav-links">
             <li><a href="index.html">ABOUT/PRODUCTIONS</a></li>
-            <li><a href="compositions.html">COMPOSITIONS</a></li>
-            <li><a href="dj.html">DJ</a></li>
+            <li><a href="join.html">JOIN NOW</a></li>
+            
+        <!--   <button class="join-now-btn" onclick="goToLoginPage()">Join Now</button> -->   
+
           </ul>
         </nav>
-      </header>
+    </header>
 
-    <div class="container">
-        <!-- Signup Form -->
-        <form id="signup-form">
-          <h2>Sign Up</h2>
-          <input type="text" id="signup-username" placeholder="Username" required>
-          <input type="password" id="signup-password" placeholder="Password" required>
-          <button type="button" onclick="handleSignup()">Sign Up</button>
-          <div class="switch">
-            Already have an account? <a onclick="showLogin()">Log in</a>
-          </div>
-        </form>
-    
-        <!-- Login Form -->
-        <form id="login-form" class="hidden">
-          <h2>Log In</h2>
-          <input type="text" id="login-username" placeholder="Username" required>
-          <input type="password" id="login-password" placeholder="Password" required>
-          <button type="button" onclick="handleLogin()">Log In</button>
-          <div class="switch">
-            Don't have an account? <a onclick="showSignup()">Sign up</a>
-          </div>
-        </form>
-    </div>
+
 
     <div class="grid-container">
 
@@ -102,14 +82,6 @@
           <p class="headings">A GENERIC SONG FOR DARLA AND LACY</p>
 
         </div>
-
-
-
-
-
-
-
-
 
 
       <footer class="footer"></footer>
